feat(server): 完善登陆
